error in Makefile
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@2300 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/po/Makefile.in
+++ b/bluefish/po/Makefile.in
@@ -71,7 +71,7 @@ update-po: ${PACKAGE}.po
 	@for file in $(SRCS) ; do \
 		lang=`echo $${file} | sed -e 's/\.po$$//'`;\
 		echo -n "updating $${lang}.po...";\
-		$(MSGMERGE) -q --output-file=tmp.po $${lang}.po bluefish.po && mv tmp.po $${lang}.po;\
+		$(MSGMERGE) -q --output-file=tmp.po $${lang}.po ${PACKAGE}.po && mv tmp.po $${lang}.po;\
 		$(MSGFMT) --statistics $${lang}.po -o $${lang}.gmo ;\
 	done
 
