enabled translation of the plugin
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@2302 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/configure.ac
+++ b/bluefish/configure.ac
@@ -769,7 +769,8 @@ AC_CONFIG_FILES(
 	data/bluefish.desktop
 	data/bluefish-project.desktop
 	data/bluefish.keys
-	src/plugin_htmlbar/Makefile)
+	src/plugin_htmlbar/Makefile
+	src/plugin_htmlbar/po/Makefile)
 AC_OUTPUT
 
 echo "-----------"
