make distclean failed
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@2303 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/src/plugin_htmlbar/Makefile.in
+++ b/bluefish/src/plugin_htmlbar/Makefile.in
@@ -74,4 +74,9 @@ $(PLUGIN) : $(OBJECTS)
 clean :
 	rm -f $(PLUGIN) *.o
 
+patchclean:
+	rm -f *.orig *.rej
+
+distclean: clean patchclean
+	rm -f Makefile
 
