--- a/src/plugin_htmlbar/Makefile.in
+++ b/src/plugin_htmlbar/Makefile.in
@@ -72,6 +72,7 @@ $(PLUGIN) : $(OBJECTS)
 	$(CC) $(DEFS) $(CFLAGS) -c $^ -o $@
 
 clean :
+	@cd po/ && make clean
 	rm -f $(PLUGIN) *.o
 
 patchclean:
