BfTextView integration (hope I do not crush whole Bfish :) )
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@2306 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/src/Makefile.in
+++ b/bluefish/src/Makefile.in
@@ -59,6 +59,7 @@ SRCS = 	about.c \
 			authen2.c \
 			bf_lib.c \
 			bfspell.c \
+			bf-textview.c \
 			bluefish.c \
 			bookmark.c \
 			char_table.c \
