--- a/bluefish/configure.ac
+++ b/bluefish/configure.ac
@@ -215,6 +215,16 @@ AC_ARG_ENABLE(gcov-coverage,
    echo "With gcov coverage"
 	CFLAGS="$CFLAGS -fprofile-arcs -ftest-coverage"],)
 
+AC_ARG_ENABLE(scanner,
+	AC_HELP_STRING([--enable-scanner],[Use BfTextView scanner for editor widget]),
+	scanner=$enableval,
+	scanner=no
+)
+if test "$scanner" != no; then
+	AC_DEFINE(USE_SCANNER)
+fi
+
+
 dnl ************************
 dnl Check for standard headers
 dnl ************************
