--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -59,6 +59,7 @@ SRCS = 	about.c \
 			authen2.c \
 			bf_lib.c \
 			bfspell.c \
+			bf-textview.c \
 			bluefish.c \
 			bookmark.c \
 			char_table.c \
