makefile fixes make install and --disable-nls were not working
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@2309 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/src/plugin_htmlbar/Makefile.in
+++ b/bluefish/src/plugin_htmlbar/Makefile.in
@@ -59,13 +59,10 @@ OBJECTS= cap.o \
 all : $(PLUGIN)
 
 install : $(PLUGIN)
-	@cd po/ && make install
-	$(INSTALL_DIR) $(PLUGINDIR)
-	$(INSTALL_PROGRAM) $(PLUGIN) $(PLUGINDIR)
-
+	$(INSTALL_DIR) $(DESTDIR)$(PLUGINDIR)
+	$(INSTALL_PLUGIN) $(PLUGIN) $(DESTDIR)$(PLUGINDIR)
 
 $(PLUGIN) : $(OBJECTS)
-	@cd po/ && make
 	$(CC) $(LIBS) -shared $^ -o $@
 
 .c.o: $(SRCS)
