makefile fixes make install and --disable-nls were not working
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk/bluefish@2309 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/Makefile.in
+++ b/Makefile.in
@@ -54,6 +54,7 @@ all: ${MAKEMAIN}
 
 make-nls:
 	cd po/ && $(MAKE) all;
+	cd src/plugin_htmlbar/po/ && $(MAKE) all;
 
 clean:
 	rm -f core *~
@@ -84,6 +85,7 @@ install-theme-icon:
 
 install-nls:
 	cd po/ && $(MAKE) install
+	cd src/plugin_htmlbar/po/ && $(MAKE) install
 
 install: src/bluefish ${INSTALLMAIN}
 	pkgdatadir=@pkgdatadir@
