plugin now goes to ${prefix}/lib/${PACKAGE}/
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@2310 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/configure.ac
+++ b/bluefish/configure.ac
@@ -720,6 +720,9 @@ fi
 
 pkgdatadir=${datadir}/${PACKAGE}/
 AC_SUBST(pkgdatadir)
+pkglibdir=${libdir}/${PACKAGE}/
+AC_SUBST(pkglibdir)
+
 
 eval BF_APP_PKGDATADIR=`echo $pkgdatadir`
 AC_SUBST(BF_APP_PKGDATADIR)
