--- a/bluefish/Makefile.in
+++ b/bluefish/Makefile.in
@@ -60,6 +60,7 @@ clean:
 	rm -f core *~
 	@cd src/ && $(MAKE) clean
 	@cd po/ && $(MAKE) clean
+	@cd src/plugin_htmlbar/po/ && $(MAKE) clean
 	@cd data/ && $(MAKE) clean
 
 patchclean: clean
@@ -69,6 +70,7 @@ patchclean: clean
 distclean:
 	@cd src/ && $(MAKE) distclean
 	@cd po/ && $(MAKE) distclean
+	@cd src/plugin_htmlbar/po/ && $(MAKE) distclean
 	@cd data/ && $(MAKE) distclean
 	rm -f Makefile src/Makefile icons/Makefile config.status config.cache config.log
 	rm -rf autom4te.cache/
@@ -99,6 +101,7 @@ uninstall:
 	@cd icons/ && $(MAKE) uninstall
 	@cd src/ && $(MAKE) uninstall
 	@cd po/ && $(MAKE) uninstall
+	@cd src/plugin_htmlbar/po/ && $(MAKE) uninstall
 	@cd data/ && $(MAKE) uninstall
 	rm -f $(DESTDIR)$(pkgdatadir)/bluefish_splash.png
 	rm -f $(DESTDIR)$(ICONPATH)/bluefish-icon.png
