--- a/bluefish/src/plugin_htmlbar/po/Makefile.in
+++ b/bluefish/src/plugin_htmlbar/po/Makefile.in
@@ -1,7 +1,7 @@
 # Makefile for gettext support
 # Copyright (C) 2002 Olivier Sessink <olivier@bluefish.openoffice.nl>
 
-PACKAGE = @PACKAGE@
+PACKAGE = @PACKAGE@_plugin_htmlbar
 VERSION = @VERSION@
 
 SHELL = /bin/sh
@@ -71,7 +71,7 @@ update-po: ${PACKAGE}.po
 	@for file in $(SRCS) ; do \
 		lang=`echo $${file} | sed -e 's/\.po$$//'`;\
 		echo -n "updating $${lang}.po...";\
-		$(MSGMERGE) -q --output-file=tmp.po $${lang}.po bluefish.po && mv tmp.po $${lang}.po;\
+		$(MSGMERGE) -q --output-file=tmp.po $${lang}.po ${PACKAGE}.po && mv tmp.po $${lang}.po;\
 		$(MSGFMT) --statistics $${lang}.po -o $${lang}.gmo ;\
 	done
 
