Fix one more issue.
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@2312 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/src/plugin_htmlbar/po/Makefile.in
+++ b/bluefish/src/plugin_htmlbar/po/Makefile.in
@@ -65,7 +65,7 @@ distclean: clean
 	rm -f Makefile tmp.po ${PACKAGE}.po *.rej *.orig *~
 
 ${PACKAGE}.po:
-	$(XGETTEXT) --from-code=UTF-8 --default-domain=${PACKAGE} --keyword=_ --keyword=N_ ../src/*.c
+	$(XGETTEXT) --from-code=UTF-8 --default-domain=${PACKAGE} --keyword=_ --keyword=N_ ../*.c
 
 update-po: ${PACKAGE}.po
 	@for file in $(SRCS) ; do \
