--- a/src/plugin_htmlbar/po/Makefile.in
+++ b/src/plugin_htmlbar/po/Makefile.in
@@ -65,7 +65,7 @@ distclean: clean
 	rm -f Makefile tmp.po ${PACKAGE}.po *.rej *.orig *~
 
 ${PACKAGE}.po:
-	$(XGETTEXT) --from-code=UTF-8 --default-domain=${PACKAGE} --keyword=_ --keyword=N_ ../src/*.c
+	$(XGETTEXT) --from-code=UTF-8 --default-domain=${PACKAGE} --keyword=_ --keyword=N_ ../*.c
 
 update-po: ${PACKAGE}.po
 	@for file in $(SRCS) ; do \
