adding the quickbar to the plugin
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@2318 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/src/plugin_htmlbar/pixmaps/Makefile
+++ b/bluefish/src/plugin_htmlbar/pixmaps/Makefile
@@ -84,6 +84,7 @@ TOOLBAR = \
 	pixmap_open_small open_small.png \
 	pixmap_paragraph paragraph.png \
 	pixmap_php3 php3.png \
+	pixmap_quick_start quick_start.png \
 	pixmap_right right.png \
 	pixmap_samp samp.png \
 	pixmap_strikeout strikeout.png \
