--- a/bluefish/debian/control
+++ b/bluefish/debian/control
@@ -2,7 +2,7 @@ Source: bluefish
 Maintainer: Davide Puricelli (evo) <evo@debian.org>
 Section: web
 Priority: optional
-Build-Depends: debhelper (>= 4), autoconf, automake1.7, autotools-dev, gettext, libtool, libaspell-dev, libfreetype6-dev, libgnomevfs2-dev, libglib2.0-dev, libgtk2.0-dev, libpcre3-dev, libxml2-dev, zlib1g-dev
+Build-Depends: debhelper (>= 4), autoconf, automake1.7, autotools-dev, gettext, libaspell-dev, libfreetype6-dev, libgnomevfs2-dev, libglib2.0-dev, libgtk2.0-dev, libpcre3-dev, libxml2-dev, zlib1g-dev
 Build-Conflicts: autoconf2.13, automake1.4
 Standards-Version: 3.6.1.1
 
