--- a/debian/control
+++ b/debian/control
@@ -4,14 +4,14 @@ Section: web
 Priority: optional
 Build-Depends: debhelper (>= 4), autoconf, automake1.7, autotools-dev, gettext, libaspell-dev, libfreetype6-dev, libgnomevfs2-dev, libglib2.0-dev, libgtk2.0-dev, libpcre3-dev, libxml2-dev, zlib1g-dev
 Build-Conflicts: autoconf2.13, automake1.4
-Standards-Version: 3.6.1.1
+Standards-Version: 3.6.2.1
 
 Package: bluefish
 Architecture: any
 Depends: ${shlibs:Depends}
 Suggests: galeon | mozilla | www-browser, weblint-perl | weblint, libxml2-utils, php4-cli
 Description: advanced Gtk+ HTML editor
- Bluefish is a GTK HTML editor for the experienced web designer.
+ Bluefish is a GTK+ HTML editor for the experienced web designer.
  Its features include nice wizards for startup, tables and frame; a
  fully featured image insert dialog; thumbnail creation and automatically
  linking of the thumbnail with the original image; and configurable HTML
