Add upstream chngelog to debian package.
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/branches/bluefish_1_0@2378 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/debian/rules
+++ b/bluefish/debian/rules
@@ -87,8 +87,7 @@ binary-arch: build install
 	dh_installdocs
 	dh_installman
 	dh_installmenu
-	dh_installchangelogs
-	# dh_installchangelogs ChangeLog # if source contains ChangeLog
+	dh_installchangelogs NEWS
 	dh_link
 	dh_strip
 	dh_compress
