Some build fixes.
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk/bluefish@2418 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/Makefile.in
+++ b/Makefile.in
@@ -104,6 +104,6 @@ uninstall:
 	@cd src/plugin_htmlbar/po/ && $(MAKE) uninstall
 	@cd data/ && $(MAKE) uninstall
 	rm -f $(DESTDIR)$(pkgdatadir)/bluefish_splash.png
-	rm -f $(DESTDIR)$(ICONPATH)/bluefish-icon.png
+	rm -f $(DESTDIR)$(ICONPATH)/$(PACKAGE)-icon.png
 	rm -r $(DESTDIR)$(THEMEPATH)/48x48/apps/$(PACKAGE).png
-	/bin/rmdir $(DESTDIR)$(pkgdatadir)
+	rmdir $(DESTDIR)$(pkgdatadir)
