--- a/src/plugin_htmlbar/Makefile.in
+++ b/src/plugin_htmlbar/Makefile.in
@@ -61,21 +61,26 @@ OBJECTS= cap.o \
 
 LOBJECTS = $(OBJECTS:.o=.lo)
 
-all : $(PLUGIN)
+all: $(PLUGIN)
 
-install : $(PLUGIN)
+install: $(PLUGIN)
 	$(INSTALL_DIR) $(DESTDIR)$(PLUGINDIR)
 	$(INSTALL_PLUGIN) $(PLUGIN) $(DESTDIR)$(PLUGINDIR)
 
-$(PLUGIN) : $(OBJECTS)
+uninstall:
+	rm -f $(DESTDIR)$(PLUGINDIR)/$(PLUGIN)
+	rmdir $(DESTDIR)$(PLUGINDIR)		
+
+$(PLUGIN): $(OBJECTS)
 	$(LIBTOOL) --mode=link $(CC) -module $(LIBS) -shared -o $@ $(LOBJECTS)
 
 .c.o: $(SRCS)
 	$(LIBTOOL) --mode=compile $(CC) $(DEFS) $(CFLAGS) -c $^ -o $@
 
-clean :
+clean:
 	@cd po/ && make clean
 	rm -f $(PLUGIN) *.o *.lo
+	rm -rf .libs
 
 patchclean:
 	rm -f *.orig *.rej
