Some build fixes.
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@2418 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/data/Makefile.in
+++ b/bluefish/data/Makefile.in
@@ -101,7 +101,7 @@ uninstall:
 	rm -f $(DESTDIR)$(ICONPATH)/gnome-mime-application-bluefish-project.png
 	rm -f $(DESTDIR)$(THEMEPATH)/48x48/mimetypes/gnome-mime-application-bluefish-project.png
 	@for file in $(DEFAULTFILES) ; do \
-		rm -f $(DESTDIR)$(pkgdatadir)$$file.default ;\
+		rm -f $(DESTDIR)$(pkgdatadir)$$file ;\
 	done
 	@for file in $(FUNCREFFILES) ; do \
 		rm -f $(DESTDIR)$(pkgdatadir)$$file ;\
