--- a/bluefish/Makefile.in
+++ b/bluefish/Makefile.in
@@ -104,6 +104,6 @@ uninstall:
 	@cd src/plugin_htmlbar/po/ && $(MAKE) uninstall
 	@cd data/ && $(MAKE) uninstall
 	rm -f $(DESTDIR)$(pkgdatadir)/bluefish_splash.png
-	rm -f $(DESTDIR)$(ICONPATH)/bluefish-icon.png
+	rm -f $(DESTDIR)$(ICONPATH)/$(PACKAGE)-icon.png
 	rm -r $(DESTDIR)$(THEMEPATH)/48x48/apps/$(PACKAGE).png
-	/bin/rmdir $(DESTDIR)$(pkgdatadir)
+	rmdir $(DESTDIR)$(pkgdatadir)
