--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -92,6 +92,7 @@ OBJS = $(SRCS:.c=.o)
 
 all: bluefish
 	@cd plugin_htmlbar/ && $(MAKE) all
+	@cd plugin_about/ && $(MAKE) all
 
 bluefish: $(SRCS) $(OBJS)
 	$(CC) $(DEFS) -o bluefish $(OBJS) $(LDFLAGS) $(LIBS)
@@ -105,21 +106,26 @@ $(OBJS): bluefish.h
 clean:
 	rm -f $(OBJS) bluefish
 	@cd plugin_htmlbar/ && $(MAKE) clean
+	@cd plugin_about/ && $(MAKE) clean
 
 patchclean: clean
 	rm -f *.orig *.rej
 	@cd plugin_htmlbar/ && $(MAKE) patchclean
+	@cd plugin_about/ && $(MAKE) patchclean
 
 distclean: patchclean
 	rm -f config.h Makefile *~ *.bak core
 	rm -f *.bb *.bbg *.c.gcov *.da
 	@cd plugin_htmlbar/ && $(MAKE) distclean
+	@cd plugin_about/ && $(MAKE) distclean
 
 install: all
 	$(INSTALL_DIR) $(DESTDIR)$(bindir)
 	$(INSTALL_PROGRAM) ./bluefish $(DESTDIR)$(bindir)/$(PACKAGE)
 	@cd plugin_htmlbar/ && $(MAKE) install
+	@cd plugin_about/ && $(MAKE) install
 
 uninstall:
 	rm -f $(DESTDIR)$(bindir)/$(PACKAGE)
 	@cd plugin_htmlbar/ && $(MAKE) uninstall
+	@cd plugin_about/ && $(MAKE) uninstall
