--- a/bluefish/debian/rules
+++ b/bluefish/debian/rules
@@ -48,7 +48,7 @@ build-stamp: config.status
 clean:
 	dh_testdir
 	dh_testroot
-	-rm -f build-stamp configure-stamp
+	-rm -f build-stamp
 	
 	# Add here commands to clean up after the build process.
 	-$(MAKE) distclean
