Update rules. Run libtoolize to update the libtool files and add --disable-rpath option (usage of rpath is discouraged in Debian).
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@2427 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/debian/rules
+++ b/bluefish/debian/rules
@@ -32,6 +32,7 @@ config.status: configure
 		--without-icon-path \
 		--without-gnome2_4-mime \
 		--without-gnome2_4-appreg \
+		--disable-rpath \
 		--disable-update-databases
 
 build: build-stamp
@@ -52,6 +53,7 @@ clean:
 	-$(MAKE) distclean
 	-rm -f config.*
 	
+	libtoolize -c --force
 	-test -r /usr/share/misc/config.sub && \
 		cp -f /usr/share/misc/config.sub config.sub
 	-test -r /usr/share/misc/config.guess && \
