--- a/Makefile.in
+++ b/Makefile.in
@@ -71,8 +71,9 @@ distclean:
 	@cd src/ && $(MAKE) distclean
 	@cd po/ && $(MAKE) distclean
 	@cd src/plugin_htmlbar/po/ && $(MAKE) distclean
+	@cd src/plugin_about/po/ && $(MAKE) distclean
 	@cd data/ && $(MAKE) distclean
-	rm -f Makefile src/Makefile icons/Makefile config.status config.cache config.log
+	rm -f Makefile src/Makefile icons/Makefile config.status config.cache config.log libtool 
 	rm -rf autom4te.cache/
 	rm -f *.orig *.rej
 
