Fix uninstall issues (rmdir fails on non-empty directories).
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk/bluefish@2443 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/Makefile.in
+++ b/Makefile.in
@@ -107,4 +107,4 @@ uninstall:
 	rm -f $(DESTDIR)$(pkgdatadir)/bluefish_splash.png
 	rm -f $(DESTDIR)$(ICONPATH)/$(PACKAGE)-icon.png
 	rm -r $(DESTDIR)$(THEMEPATH)/48x48/apps/$(PACKAGE).png
-	rmdir $(DESTDIR)$(pkgdatadir)
+	rmdir --ignore-fail-on-non-empty $(DESTDIR)$(pkgdatadir)
