--- a/src/plugin_htmlbar/Makefile.in
+++ b/src/plugin_htmlbar/Makefile.in
@@ -69,7 +69,7 @@ install: $(PLUGIN)
 
 uninstall:
 	rm -f $(DESTDIR)$(PLUGINDIR)/$(PLUGIN)
-	rmdir $(DESTDIR)$(PLUGINDIR)		
+	rmdir --ignore-fail-on-non-empty $(DESTDIR)$(PLUGINDIR)		
 
 $(PLUGIN): $(OBJECTS)
 	$(LIBTOOL) --mode=link $(CC) -module $(LIBS) -shared -o $@ $(LOBJECTS)
