Fix uninstall issues (rmdir fails on non-empty directories).
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@2443 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/src/plugin_about/Makefile.in
+++ b/bluefish/src/plugin_about/Makefile.in
@@ -57,7 +57,7 @@ install: $(PLUGIN)
 
 uninstall:
 	rm -f $(DESTDIR)$(PLUGINDIR)/$(PLUGIN)
-	rmdir $(DESTDIR)$(PLUGINDIR)		
+	rmdir --ignore-fail-on-non-empty $(DESTDIR)$(PLUGINDIR)		
 
 $(PLUGIN): $(OBJECTS)
 	$(LIBTOOL) --mode=link $(CC) -module $(LIBS) -shared -o $@ $(LOBJECTS)
