Fix usage of option --ignore-fail-on-non-empty, because it probably does not exist for *BSD.
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@2444 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/src/plugin_htmlbar/Makefile.in
+++ b/bluefish/src/plugin_htmlbar/Makefile.in
@@ -69,7 +69,7 @@ install: $(PLUGIN)
 
 uninstall:
 	rm -f $(DESTDIR)$(PLUGINDIR)/$(PLUGIN)
-	rmdir --ignore-fail-on-non-empty $(DESTDIR)$(PLUGINDIR)		
+	-rmdir $(DESTDIR)$(PLUGINDIR)		
 
 $(PLUGIN): $(OBJECTS)
 	$(LIBTOOL) --mode=link $(CC) -module $(LIBS) -shared -o $@ $(LOBJECTS)
