--- a/bluefish/src/plugin_about/Makefile.in
+++ b/bluefish/src/plugin_about/Makefile.in
@@ -57,7 +57,7 @@ install: $(PLUGIN)
 
 uninstall:
 	rm -f $(DESTDIR)$(PLUGINDIR)/$(PLUGIN)
-	rmdir --ignore-fail-on-non-empty $(DESTDIR)$(PLUGINDIR)		
+	-rmdir $(DESTDIR)$(PLUGINDIR)		
 
 $(PLUGIN): $(OBJECTS)
 	$(LIBTOOL) --mode=link $(CC) -module $(LIBS) -shared -o $@ $(LOBJECTS)
